# OMPRayMarcher

./: CMakeLists.txt  LICENSE  README.md  box.cpp  box.h  difference_of_objects.cpp  difference_of_objects.h  fractal.cpp  fractal.h  intersection_of_objects.cpp  intersection_of_objects.h  light.cpp  light.h  main.cpp  object_interface.cpp  object_interface.hpp  ray_marcher.cpp  ray_marcher.h  sphere.cpp  sphere.h  union_of_objects.cpp  union_of_objects.h
example-setup/: box.cpp  box.h  difference_of_objects.cpp  difference_of_objects.h  fractal.cpp  fractal.h  intersection_of_objects.cpp  intersection_of_objects.h  main.cpp  sphere.cpp  sphere.h  union_of_objects.cpp  union_of_objects.h
